--- a/windows/PhotobookUI/Dashboard.xaml
+++ b/windows/PhotobookUI/Dashboard.xaml
@@ -62,5 +62,27 @@
                 </GridView.ItemsPanel>
             </GridView>
         </Grid>
+        <ContentDialog Title="Rename Project"
+                       Foreground="{StaticResource MainFontColor}"
+                       x:Name="RenameProjectDialog"
+                       Background="{StaticResource PrimaryColor}"
+                       PrimaryButtonText="Rename"
+                       PrimaryButtonStyle="{StaticResource ContentDialogPrimaryButtonStyle}"
+                       CloseButtonText="Cancel"
+                       PrimaryButtonClick="OnRenameProjectDialogRename"
+                       CloseButtonClick="OnRenameProjectDialogCancel">
+            <ContentDialog.Resources>
+                <SolidColorBrush x:Key="ButtonBackground"
+                                 Color="{StaticResource ButtonBackgroundColor}" />
+                <SolidColorBrush x:Key="ButtonForeground"
+                                 Color="{StaticResource MainFontColor}" />
+            </ContentDialog.Resources>
+            <StackPanel>
+                <TextBox x:Name="RenameProjectDialogTextBox"
+                         Foreground="{StaticResource MainFontColor}"
+                         Header="Name:"
+                         PlaceholderText="Name example" />
+            </StackPanel>
+        </ContentDialog>
     </Grid>
 </Page>
