fix: Fix export crash.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -596,7 +596,7 @@
                 </CheckBox>
                 <TextBox x:Name="ExportNameTextBox"
                          Header="Name:"
-                         PlaceholderText="Photobook1">
+                         PlaceholderText="Photobook Name">
                     <TextBox.HeaderTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}"
