--- a/windows/PhotobookNet/TableContentPage.xaml
+++ b/windows/PhotobookNet/TableContentPage.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page
-    x:Class="PhotobookNet.TableContentPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PhotobookNet"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+<Page x:Class="PhotobookNet.TableContentPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:PhotobookNet"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
+      mc:Ignorable="d"
+      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -270,6 +270,9 @@
                                               Draw="OnCanvasDraw"
                                               x:Name="GalleryCanvas"
                                               ClearColor="#000000" />-->
+                        <canvas:CanvasControl Draw="OnCanvasDraw"
+                                              x:Name="GalleryCanvas"
+                                              ClearColor="#000000" />
                     </Grid>
                     <Grid x:Name="GalleryBottomName"
                           Grid.Row="1"
