--- a/windows/PhotobookNet/MainWindow.xaml
+++ b/windows/PhotobookNet/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="using:PhotobookNet"
+        xmlns:underlying="using:PhotobookRuntimeComponent"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d">
@@ -41,8 +42,8 @@
                       IsItemClickEnabled="True"
                       SelectionMode="None"
                       VerticalAlignment="Center">
-                <!--<GridView.ItemTemplate>
-                    <DataTemplate x:DataType="local:ProjectItem">
+                <GridView.ItemTemplate>
+                    <DataTemplate x:DataType="underlying:ProjectItem">
                         <Grid Width="100"
                               Height="100"
                               Background="{StaticResource ButtonBackgroundColor}"
@@ -54,7 +55,7 @@
                                        TextWrapping="Wrap"></TextBlock>
                         </Grid>
                     </DataTemplate>
-                </GridView.ItemTemplate>-->
+                </GridView.ItemTemplate>
                 <GridView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <ItemsWrapGrid MaximumRowsOrColumns="1" />
