--- a/windows/PhotobookNet/TableContentPage.xaml
+++ b/windows/PhotobookNet/TableContentPage.xaml
@@ -3,6 +3,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:PhotobookNet"
+      xmlns:underlying="using:PhotobookRuntimeComponent"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
@@ -265,12 +266,9 @@
                     </Grid.ColumnDefinitions>
                     <Grid Grid.Row="0"
                           Grid.Column="0">
-                        <!--<canvas:CanvasControl MinHeight="{x:Bind CanvasMinHeight}"
+                        <canvas:CanvasControl MinHeight="{x:Bind CanvasMinHeight}"
                                               MinWidth="{x:Bind CanvasMinWidth}"
                                               Draw="OnCanvasDraw"
-                                              x:Name="GalleryCanvas"
-                                              ClearColor="#000000" />-->
-                        <canvas:CanvasControl Draw="OnCanvasDraw"
                                               x:Name="GalleryCanvas"
                                               ClearColor="#000000" />
                     </Grid>
@@ -407,13 +405,13 @@
                                     <ItemsStackPanel Orientation="Horizontal" />
                                 </ItemsPanelTemplate>
                             </ListView.ItemsPanel>
-                            <!--<ListView.ItemTemplate>
-                                <DataTemplate x:DataType="local:ImageUIData">
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="underlying:ImageUIData">
                                     <Image  Height="80"
                                             Width="120"
                                             Source="{x:Bind SmallPath}" />
                                 </DataTemplate>
-                            </ListView.ItemTemplate>-->
+                            </ListView.ItemTemplate>
                         </ListView>
                     </Grid>
                     <ListView x:Name="UnstagedListView"
@@ -483,13 +481,13 @@
                                 <ItemsStackPanel Orientation="Horizontal" />
                             </ItemsPanelTemplate>
                         </ListView.ItemsPanel>
-                        <!--<ListView.ItemTemplate>
-                            <DataTemplate x:DataType="local:ImageUIData">
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="underlying:ImageUIData">
                                 <Image Height="80"
                                        Width="120"
                                        Source="{x:Bind SmallPath}" />
                             </DataTemplate>
-                        </ListView.ItemTemplate>-->
+                        </ListView.ItemTemplate>
                     </ListView>
                 </Grid>
             </Border>
